feat: 发布 1.0.3 GPT/Claude AUTH 渠道授权导入
- 新增 GPT_AUTH / CLAUDE_AUTH Provider，支持从 auth.json 读取授权凭证调用上游
- 新增 AUTH 渠道 OAuth 授权流程，支持授权链接生成、回调 URL 导入和授权状态查询
- 新增 AUTH 文件存储服务，支持按渠道隔离保存授权文件并通过 API_CONVERT_AUTH_STORAGE_DIR 配置目录
- 新增 V12 数据库迁移，补充 ai_channel 授权模式、授权文件路径、授权状态、授权主体和过期时间字段
- 管理端渠道表单支持 AUTH 渠道，隐藏 API Key 等无关字段并提供 auth.json 上传和 OAuth 操作入口
- ChatGatewayService 支持将 GPT_AUTH / CLAUDE_AUTH 映射到既有 OpenAI / Anthropic 协议适配链路
- 管理端响应新增授权状态字段，并确保授权凭证、access token 等敏感信息不暴露
- 补充 AUTH 渠道上传与路由相关集成测试
- 拆分并完善 AI 项目进度文档，修正版本、端点、测试数量和代码目录说明